@@ -1133,7 +1133,7 @@ rep_along <- function( x, along.with ) {
 #'test <- "50,762.83a"
 #'destring(test)
 #'
-destring <- function(x,keep="0-9.") {
+destring <- function(x,keep="0-9.-") {
   return( as.numeric(gsub(paste("[^",keep,"]+",sep=""),"",x)) )
 }
 
@@ -1350,27 +1350,32 @@ readdir <- function(path, exclude="", filename.as.variable="filename", stack=FAL
 
 #' Recursively delete entries containing `what` before entry pointed to by `which`
 #' @param x data vector
-#' @param which Vector of indices to check preceding element for `what`
+#' @param wch Vector of indices to check preceding element for `what`
 #' @param what What to check for and delete if found in preceding element
 #' @return A vector of the same type as x with all the `what`'s removed if they were at the `which`-(1,2,3...) locations
 #' @export munch
 #' @examples
 #' x <- c("a","","b","","","","","c","d","","","","e","")
 #' munch( x, c(3,8,9,13) )
-munch <- function(x,which,what="") {
-  cat("Which:",paste(which,collapse="~"),"\n")
-  if(length(which)>1) { # Dispatch single-which handlers
-    which <- sort(which) # Have to dispatch them in ascending order otherwise our offset logic fails
-    for(w in seq(length(which)) ) {
-      x <- munch(x,which[w],what)
-      which <- which - attr(x,"offset")
+munch <- function(x,wch,what="") {
+  if(length(wch)>1) {
+    i <- 1
+    repeat {
+      cat("i",i,"wch",paste(wch,collapse="~"),"\n")
+      initialLength <- length(x)
+      x <- munchOne( x=x, wch=wch[i], what=what )
+      wch <- wch - ( initialLength - length(x) )
+      i <- i + 1
+      if( i > length(wch) ) break
     }
-    attr(x,"offset") <- NULL
-  } else if( x[which-1]==what ) { # Single-which handler
-    initialLength <- length(x)
-    x <- x[-(which-1)]
-    x <- munch(x,which-1)
-    attr(x,"offset") <- initialLength - length(x)
+  }
+  x
+}
+munchOne <- function(x,wch,what="") {
+  cat("MO",wch,"x",paste(x,collapse="*"),"\n")
+  if(x[wch-1]==what) {
+    x <- x[-(wch-1)]
+    x <- munchOne(x,wch-1)
   }
   return(x)
 }
